# Terminator

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
src/: arch_parse.c  arch_parse.h  branch_hints.h  chunk.c  chunk.h  exec.c  imm.c  imm.h  stream.c  stream.h
src/data/: x86_64.arch
src/x86_64/: instruction.c  instruction.h  machine.c  machine.h  registers.c  registers.h
